testsuite/tests/properties/invalid_array_lit/incompatible_implicit/test.lkt
from common import FooNode

class Example: FooNode {
    @exported fun p(): Array[Bool] = [true, node]
}
